data: cron update

--- a/data/sources/strv.yaml
+++ b/data/sources/strv.yaml
@@ -476,12 +476,9 @@ series:
         dtstart: 2022-05-10 18:00:00+02:00
         dtend: 2022-05-10 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, May 24, 7:00 PM  CEST: **👉 [PLEASE MAKE SURE TO GRAB A TICKET HERE](https://www.eventbrite.com/e/strv-web3-meetup-tickets-338869065497?aff=meetup) 👈**
-
-
-        We’re excited to be launching STRV Web3 M'
-      og_title: STRV Web3 Meetup, Tue, May 24, 2022, 7:00 PM   | Meetup
-      url: https://www.meetup.com/strv-meetups/events/285858747/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: STRV Web3 Meetup
         description: 'STRV Meetups
@@ -492,14 +489,14 @@ series:
           **👉 (https://www.eventbrite.com/e/strv-web3-meetup-tickets-338869065497?aff=meetup) 👈** We’re excited to be launching STRV Web3 Meetups — monthly pane...
 
 
-          https://www.meetup.com/STRV-Meetups/events/285858747/'
+          https://www.meetup.com/strv-meetups/events/285858747/'
         location: STRV Prague (Rohanske nabrezi 678/23, Prague, Czech Republic)
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_285858747@meetup.com
-        url: https://www.meetup.com/STRV-Meetups/events/285858747/
+        url: https://www.meetup.com/strv-meetups/events/285858747/
         dtstart: 2022-05-24 19:00:00+02:00
         dtend: 2022-05-24 21:00:00+02:00
   - meetupcom:
