--- a/data/sources/pehapkari-cz.yaml
+++ b/data/sources/pehapkari-cz.yaml
@@ -4134,3 +4134,27 @@ series:
         url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/285475940/
         dtstart: 2022-05-19 18:00:00+02:00
         dtend: 2022-05-19 22:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 48. sraz přátel PHP v CareCloud v Praze
+        description: 'Pražské srazy přátel PHP - Pehapkari.cz
+
+          Thursday, May 19 at 6:00 PM
+
+
+          **Zveme vás na 48. setkání PHP vývojářů do Prahy 9 - Vysočan, kde sídlí partner květnového setkání, vývojáři CareCloud.** Čeká vás program nabitý před...
+
+
+          https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/285475940/'
+        location: CareCloud CRM (U Elektry 974, Praha 9, Czech Republic 190 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_285475940@meetup.com
+        url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/285475940/
+        dtstart: 2022-05-19 18:00:00+02:00
+        dtend: 2022-05-19 22:00:00+02:00
