--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -1249,9 +1249,9 @@ series:
         dtstart: 2022-06-07 18:30:00+02:00
         dtend: 2022-06-07 19:30:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Jun 9, 6:30 PM  CEST: [Graph databases](https://docs.vaticle.com/docs/comparisons/graph-databases-and-typedb) have matured into mainstream technologies, used across any industry powering mission'
-      og_title: ' Graph Databases vs TypeDB | What You Can''t do With Graphs, Thu, Jun 9, 2022, 6:30 PM   | Meetup'
-      url: https://www.meetup.com/typedb-prague/events/286110971/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: ' Graph Databases vs TypeDB | What You Can''t do With Graphs'
         description: 'TypeDB Prague Engineers
@@ -1392,3 +1392,32 @@ series:
         url: https://www.meetup.com/typedb-prague/events/286110500/
         dtstart: 2022-06-07 18:30:00+02:00
         dtend: 2022-06-07 19:30:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, Jun 23, 6:30 PM  CEST: Build your skills and learn how TypeDB''s native inference engine works.
+
+
+        **Good for:**
+
+        \- Beginners to [TypeDB and TypeQL](https://docs.vaticle.com/docs/general/quickstart)'
+      og_title: TypeDB Academy | Inference with Rules, Thu, Jun 23, 2022, 6:30 PM   | Meetup
+      url: https://www.meetup.com/typedb-prague/events/286113864/
+      ical:
+        summary: TypeDB Academy | Inference with Rules
+        description: 'TypeDB Prague Engineers
+
+          Thursday, June 23 at 6:30 PM
+
+
+          Build your skills and learn how TypeDB''s native inference engine works. **Good for:**\\- Beginners to (https://docs.vaticle.com/docs/general/quickstart...
+
+
+          https://www.meetup.com/typedb-prague/events/286113864/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286113864@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/286113864/
+        dtstart: 2022-06-23 18:30:00+02:00
+        dtend: 2022-06-23 19:30:00+02:00
