--- a/data/sources/msd-it.yaml
+++ b/data/sources/msd-it.yaml
@@ -6,11 +6,9 @@ series:
     image: https://secure.meetupstatic.com/photos/event/c/1/9/a/600_468049562.jpeg
   events:
   - meetupcom:
-      meta_description: 'Thu, Jun 9, 6:00 PM  CEST: We believe knowledge and intel sharing is the key to preventing cyber threats. Join the community and come to the first Cybersecurity Meetup in Prague!
-
-        We will talk about O'
-      og_title: Cybersecurity Meetup , Thu, Jun 9, 2022, 6:00 PM   | Meetup
-      url: https://www.meetup.com/msd-it-meet-ups/events/285392625/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: 'Cybersecurity Meetup '
         description: 'MSD IT Meet Ups
