data: cron update

--- a/data/sources/webexpo.yaml
+++ b/data/sources/webexpo.yaml
@@ -848,12 +848,9 @@ series:
         dtstart: 2016-09-23 08:00:00+02:00
         dtend: 2016-09-24 23:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Sep 21, 10:00 AM  CEST: WebExpo is Central Europe''s largest conference covering deep tech & practical topics for developers, UX professionals & researchers, product managers, and marketers.
-
-
-        We''re'
-      og_title: WebExpo 2021, Tue, Sep 21, 2021, 10:00 AM   | Meetup
-      url: https://www.meetup.com/webexpo/events/267898993/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: WebExpo 2021
         description: 'WebExpo
@@ -864,14 +861,14 @@ series:
           WebExpo is Central Europe''s largest conference covering deep tech & practical topics for developers, UX professionals & researchers, product managers,...
 
 
-          https://www.meetup.com/WebExpo/events/267898993/'
+          https://www.meetup.com/webexpo/events/267898993/'
         location: Palace Lucerna (Vodičkova 704/36, Nové Město, Praha-Praha 1, Czech Republic 110 00)
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_267898993@meetup.com
-        url: https://www.meetup.com/WebExpo/events/267898993/
+        url: https://www.meetup.com/webexpo/events/267898993/
         dtstart: 2021-09-21 10:00:00+02:00
         dtend: 2021-09-23 18:00:00+02:00
   - meetupcom:
