--- a/data/sources/productboard.yaml
+++ b/data/sources/productboard.yaml
@@ -790,3 +790,27 @@ series:
         url: https://www.meetup.com/productboard-meetups/events/286390582/
         dtstart: 2022-06-08 18:00:00+02:00
         dtend: 2022-06-08 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Backend Meetup | BRNO
+        description: 'Productboard Meetups
+
+          Wednesday, June 8 at 6:00 PM
+
+
+          **Join the first Productboard Backend Meetup in Brno!** **About this event**Join us for our in-person meetup at Impact Hub Brno! We’re excited to host...
+
+
+          https://www.meetup.com/productboard-meetups/events/286390582/'
+        location: Impact Hub Brno (Cyrilská 7, Brno-střed-Trnitá, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286390582@meetup.com
+        url: https://www.meetup.com/productboard-meetups/events/286390582/
+        dtstart: 2022-06-08 18:00:00+02:00
+        dtend: 2022-06-08 21:00:00+02:00
